Prevent dropdown from getting hidden under other certain page elements

--- a/src/multigroupselect.css
+++ b/src/multigroupselect.css
@@ -1,4 +1,3 @@
-
 .mgs-group_multiselect_button {
 	border: 3px solid black;
 	margin-bottom: 15px;
@@ -43,6 +42,7 @@
 	height: 100%;
 	max-height: 300px;
 	box-shadow: 2px 2px 2px 2px black;
+	z-index: 1;
 }
 .mgs-hidden {
 	display: none;
